# chicago-pipeline

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODEOWNERS  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.lite.yml  docker-compose.yaml
airflow/: Dockerfile  README.md  requirements.txt
api/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt
api/app/: config.py  deps.py  main.py
api/app/middleware/: gzip.py  request_id.py
api/app/routers/: arrests.py  context.py  crime_types.py  export.py  filters.py  geo.py  health.py  overview.py  pipeline.py  quality.py  timeseries.py
api/app/schemas/: arrests.py  common.py  context.py  crime_types.py  filters.py  geo.py  overview.py  pipeline.py  quality.py  timeseries.py
api/app/services/: arrests.py  cache.py  context.py  crime_types.py  export.py  filters.py  geo.py  overview.py  pipeline.py  quality.py  timeseries.py
api/scripts/: wait-for-tables.sh
api/tests/: conftest.py  test_arrests.py  test_context.py  test_crime_types.py  test_errors.py  test_filters.py  test_geo.py  test_health.py  test_overview.py  test_pipeline.py  test_timeseries.py
contracts/: CHANGELOG.md  README.md  api-types.ts  dbt-manifest.json  design-tokens.json  event-catalog.md  gold-schema.json  (+1 more)
pipeline/: README.md  pyproject.toml  requirements.txt
pipeline/conf/: base.yaml  local.yaml
pipeline/src/chicago_pipeline/bronze/: to_bronze.py
pipeline/src/chicago_pipeline/common/: db.py  drift.py  logger.py  s3.py  settings.py  spark_session.py
pipeline/src/chicago_pipeline/gold/: to_gold.py
pipeline/src/chicago_pipeline/ingest/: download_kaggle.py
pipeline/src/chicago_pipeline/silver/: to_silver.py
pipeline/src/chicago_pipeline/warehouse/: load_postgres.py
pipeline/tests/: test_gold.py  test_ingest.py  test_silver.py  test_warehouse.py
(+299 files in other folders)
