[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "chicago-pipeline"
version = "0.1.0"
description = "Medallion pipeline for Chicago Crime DBMS"
requires-python = ">=3.11"
dependencies = [
    "pyspark==3.5.3",
    "boto3>=1.34",
    "pyyaml>=6.0",
    "kagglehub>=0.3",
    "structlog>=24.1",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.6",
    "mypy>=1.11",
    "types-pyyaml>=6.0",
    "types-python-dateutil>=2.9",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
strict = true
python_version = "3.11"
ignore_missing_imports = true
